edit CandidateConverter